Implement page scope for an actor, stream API