@@ -10,6 +10,7 @@ import rsp.page.DefaultConnectionLostWidget;
 import rsp.page.PageBuilder;
 import rsp.page.PageConfigScript;
 import rsp.page.PageNotFoundException;
+import rsp.page.PageScope;
 import rsp.page.QualifiedSessionId;
 import rsp.page.RedirectableEventsConsumer;
 import rsp.page.RenderedPage;
@@ -18,6 +19,7 @@ import rsp.util.RandomString;
 import java.time.Duration;
 import java.util.*;
 import java.util.concurrent.CompletableFuture;
+import java.util.function.BiConsumer;
 
 import static java.lang.System.Logger.Level.TRACE;
 
@@ -30,7 +32,7 @@ public final class PageHttpHandler implements HttpApplication {
 
     private final RandomString randomStringGenerator = new RandomString(KEY_LENGTH);
 
-    private final Map<QualifiedSessionId, RenderedPage> renderedPages;
+    private final BiConsumer<QualifiedSessionId, RenderedPage> registerPage;
     private final PageApplication pageApplication;
     private final int heartBeatIntervalMs;
     private final Metrics metrics;
@@ -49,8 +51,17 @@ public final class PageHttpHandler implements HttpApplication {
                            final PageApplication pageApplication,
                            final int heartBeatIntervalMs,
                            final Metrics metrics) {
+        this(pagesStorage, pageApplication, heartBeatIntervalMs, metrics, pagesStorage::put);
+    }
 
-        this.renderedPages = Objects.requireNonNull(pagesStorage);
+    PageHttpHandler(final Map<QualifiedSessionId, RenderedPage> pagesStorage,
+                    final PageApplication pageApplication,
+                    final int heartBeatIntervalMs,
+                    final Metrics metrics,
+                    final BiConsumer<QualifiedSessionId, RenderedPage> registerPage) {
+
+        Objects.requireNonNull(pagesStorage);
+        this.registerPage = Objects.requireNonNull(registerPage);
         this.pageApplication = Objects.requireNonNull(pageApplication);
         this.heartBeatIntervalMs = heartBeatIntervalMs;
         this.metrics = Objects.requireNonNull(metrics);
@@ -87,63 +98,74 @@ public final class PageHttpHandler implements HttpApplication {
                     .orElse(randomStringGenerator.newString());
             final String sessionId = randomStringGenerator.newString();
             final QualifiedSessionId pageId = new QualifiedSessionId(deviceId, sessionId);
+            final PageScope pageScope = new PageScope();
+            PageBuilder pageBuilder = null;
+            boolean handedOff = false;
+            try {
+                final PageConfigScript pageConfigScript = new PageConfigScript(sessionId,
+                        "/", DefaultConnectionLostWidget.HTML, heartBeatIntervalMs);
+                final RedirectableEventsConsumer commandsEnqueue = new RedirectableEventsConsumer();
+                final ComponentContext componentContext = new ComponentContext()
+                        .with(new ContextKey.ClassKey<>(QualifiedSessionId.class), pageId)
+                        .with(new ContextKey.ClassKey<>(CommandsEnqueue.class), commandsEnqueue)
+                        .with(PageScope.class, pageScope)
+                        .with(Metrics.class, metrics);
 
-            final PageConfigScript pageConfigScript = new PageConfigScript(sessionId,
-                                                                          "/",
-                                                                           DefaultConnectionLostWidget.HTML,
-                                                                           heartBeatIntervalMs);
+                final Optional<PageBuilder.LiveBootstrap> bootstrap = render.live()
+                        ? Optional.of(new PageBuilder.LiveBootstrap(
+                                pageConfigScript.toString(), JS_CLIENT_BUNDLE_PATH))
+                        : Optional.empty();
+                pageBuilder = new PageBuilder(pageId, bootstrap, componentContext, commandsEnqueue);
 
-            final RedirectableEventsConsumer commandsEnqueue = new RedirectableEventsConsumer();
-
-            final ComponentContext componentContext = new ComponentContext()
-                .with(new ContextKey.ClassKey<>(QualifiedSessionId.class), pageId)
-                .with(new ContextKey.ClassKey<>(CommandsEnqueue.class), commandsEnqueue)
-                .with(Metrics.class, metrics);
-
-
-            Optional<PageBuilder.LiveBootstrap> bootstrap = render.live()
-                    ? Optional.of(new PageBuilder.LiveBootstrap(pageConfigScript.toString(), JS_CLIENT_BUNDLE_PATH))
-                    : Optional.empty();
-            final PageBuilder pageBuilder = new PageBuilder(pageId,
-                                                            bootstrap,
-                                                            componentContext,
-                                                            commandsEnqueue);
-
-            final Component<?, ?> pageRootComponent = render.component();
-            pageRootComponent.render(pageBuilder);
-            final List<Throwable> renderExceptions = pageBuilder.exceptions();
-            if (renderExceptions.size() > 0) {
-                Throwable firstException = renderExceptions.get(0);
-                // Map known exceptions to HTTP status codes
-                if (firstException instanceof PageNotFoundException) {
-                    return CompletableFuture.completedFuture(HttpResponses.status(404));
-                } else if (firstException instanceof ComponentAccessDeniedException) {
-                    return CompletableFuture.completedFuture(HttpResponses.status(403));
+                final Component<?, ?> pageRootComponent = render.component();
+                pageRootComponent.render(pageBuilder);
+                final List<Throwable> renderExceptions = pageBuilder.exceptions();
+                if (!renderExceptions.isEmpty()) {
+                    Throwable firstException = renderExceptions.getFirst();
+                    if (firstException instanceof PageNotFoundException) {
+                        return CompletableFuture.completedFuture(HttpResponses.status(404));
+                    } else if (firstException instanceof ComponentAccessDeniedException) {
+                        return CompletableFuture.completedFuture(HttpResponses.status(403));
+                    }
+                    throw new RuntimeException(firstException);
                 }
-                throw new RuntimeException(firstException);
-            }
 
-            if (render.live()) {
-                final RenderedPage pageSnapshot = new RenderedPage(pageBuilder, commandsEnqueue);
-                renderedPages.put(pageId, pageSnapshot);
-            }
-            final String responseBody = pageBuilder.html();
+                final String responseBody = pageBuilder.html();
+                logger.log(TRACE, () -> "Page rendered [status=" + render.status().code()
+                        + ", bodyChars=" + responseBody.length() + "]");
 
-            logger.log(TRACE, () -> "Page rendered [status=" + render.status().code()
-                    + ", bodyChars=" + responseBody.length() + "]");
-
-            HttpResponse.Builder response = HttpResponse.status(render.status())
-                    .text(responseBody, MediaType.HTML_UTF_8)
-                    .header("Cache-Control", "no-store, no-cache, must-revalidate");
-            render.headers().forEach(header -> response.header(header.name(), header.value()));
-            render.cookies().forEach(response::cookie);
-            if (render.live()) {
-                response.cookie(SetCookie.of(DEVICE_ID_COOKIE_NAME, deviceId)
-                        .path("/")
-                        .maxAge(Duration.ofDays(3650))
-                        .sameSite(SetCookie.SameSite.LAX));
+                HttpResponse.Builder response = HttpResponse.status(render.status())
+                        .text(responseBody, MediaType.HTML_UTF_8)
+                        .header("Cache-Control", "no-store, no-cache, must-revalidate");
+                render.headers().forEach(header -> response.header(header.name(), header.value()));
+                render.cookies().forEach(response::cookie);
+                if (render.live()) {
+                    response.cookie(SetCookie.of(DEVICE_ID_COOKIE_NAME, deviceId)
+                            .path("/")
+                            .maxAge(Duration.ofDays(3650))
+                            .sameSite(SetCookie.SameSite.LAX));
+                }
+                final HttpResponse built = response.build();
+                final RenderedPage pageSnapshot = new RenderedPage(pageBuilder, commandsEnqueue, pageScope);
+                if (render.live()) {
+                    registerPage.accept(pageId, pageSnapshot);
+                    handedOff = true;
+                } else {
+                    handedOff = true;
+                    pageSnapshot.close();
+                }
+                return CompletableFuture.completedFuture(built);
+            } finally {
+                if (!handedOff) {
+                    try {
+                        if (pageBuilder != null) {
+                            pageBuilder.shutdown();
+                        }
+                    } finally {
+                        pageScope.close();
+                    }
+                }
             }
-            return CompletableFuture.completedFuture(response.build());
 
         } catch (final Exception ex) {
             return CompletableFuture.failedFuture(ex);
